--- a/frontend/sharedPaymentsWeb/src/app/app.component.html
+++ b/frontend/sharedPaymentsWeb/src/app/app.component.html
@@ -24,10 +24,13 @@
 
     <div id="friendListPanel" class="cardPanel">
       <h2>My Friend Group</h2>
-      <ul id="userList" *ngFor="let user of users">
-        <b class="friendName">{{ user.name }}</b>, current balance: 
-        <span [ngClass]="user.debt<=0  ? 'friendDebtPositive' : 'friendDebtNegative'">{{ -user.debt }}€</span>
-      </ul>
+      <div>
+        <ul id="userList" *ngFor="let user of users">
+          <b class="friendName">{{ user.name }}</b>, current balance: 
+          <span [ngClass]="user.debt<=0  ? 'friendDebtPositive' : 'friendDebtNegative'">{{ -user.debt }}€</span>
+        </ul>
+        <b class="no-item">No one yet, start by adding some friends!</b>
+      </div>
     </div>
   </div>
 
@@ -78,11 +81,14 @@
 
     <div id="paymentListPanel" class="cardPanel">
       <h2>Payment list</h2>
-      <ul id="paymentList" class="paymentListItem" *ngFor="let payment of payments">
-        <b class="paymentDescription">{{ payment.description }}</b> <br>
-        Amount: <span class="paymentPrice">{{ payment.price }}€</span> <br>
-        Payed by <b class="payerName">{{ payment.payerName }}</b> on <b>{{ payment.paymentDate }}</b>
-      </ul>
+      <div>
+        <ul id="paymentList" class="paymentListItem" *ngFor="let payment of payments">
+          <b class="paymentDescription">{{ payment.description }}</b> <br>
+          Amount: <span class="paymentPrice">{{ payment.price }}€</span> <br>
+          Payed by <b class="payerName">{{ payment.payerName }}</b> on <b>{{ payment.paymentDate }}</b>
+        </ul>
+        <b class="no-item">No payments for now!</b>
+      </div>
     </div>
   </div>
 
